fix the layout of the page so the dots are correctly aligned in 4 rows

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 
 .dots-wrapper {
-    display: block;
+    display: grid;
     background: #fff;
     height: 100vh;
     width: 100vw;
     overflow: auto;
+    grid-template-columns: repeat(5, 1fr);
+    align-items: center;
+    justify-items: center;
 }
